--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-clean-css": "^3.9.4",
     "gulp-coffee": "^3.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.5.0",
@@ -12,7 +14,6 @@
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.24.4",
     "del": "^3.0.0",
-    "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-cache": "^1.0.2",
     "gulp-css-base64": "^1.3.4",
